@@ -5,12 +5,18 @@ import dough.member.domain.Member;
 import dough.member.domain.repository.MemberRepository;
 import dough.notification.NotificationRepository;
 import dough.notification.domain.Notification;
+import dough.notification.dto.request.NotificationUpdateRequest;
+import dough.notification.dto.request.NotificationsUpdateRequest;
 import dough.notification.dto.response.NotificationResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import static dough.global.exception.ExceptionCode.NOT_FOUND_MEMBER_ID;
 import static dough.global.exception.ExceptionCode.NOT_FOUND_NOTIFICATION_ID;
@@ -24,31 +30,58 @@ public class NotificationService {
     private final NotificationRepository notificationRepository;
 
     public List<NotificationResponse> getAllNotifications(final Long memberId) {
-        final Member member = memberRepository.findById(memberId)
+        final Member member = memberRepository.findMemberById(memberId)
                 .orElseThrow(() -> new BadRequestException(NOT_FOUND_MEMBER_ID));
 
         final List<Notification> notifications = notificationRepository.findAllByMemberId(member.getId());
 
+        return getNotificationsResponse(notifications);
+    }
+
+    public List<NotificationResponse> updateNotifications(final Long memberId, final NotificationsUpdateRequest notificationsUpdateRequest) {
+        final Member member = memberRepository.findMemberById(memberId)
+                .orElseThrow(() -> new BadRequestException(NOT_FOUND_MEMBER_ID));
+
+        final Map<Long, Boolean> isCheckedOfId = notificationsUpdateRequest.getNotifications().stream()
+                .collect(Collectors.toMap(NotificationUpdateRequest::getId, NotificationUpdateRequest::getIsChecked));
+
+        final List<Notification> notifications = notificationRepository.findAllByMemberIdAndNotificationIds(member.getId(), isCheckedOfId.keySet());
+
+        validateNotifications(isCheckedOfId.keySet(), notifications);
+
+        final List<Notification> updatedNotifications = notifications.stream()
+                .map(notification -> {
+                    final Boolean isChecked = isCheckedOfId.get(notification.getId());
+                    if (!notification.isSameIsChecked(isChecked)) {
+                        notification.changeIsChecked(isChecked);
+                        return notification;
+                    }
+                    return null;
+                })
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+
+        notificationRepository.saveAll(updatedNotifications);
+
+        // TODO 더 좋은 방법이 없을지
+        final List<Notification> savedNotifications = notificationRepository.findAllByMemberId(member.getId());
+
+        return getNotificationsResponse(savedNotifications);
+    }
+
+    private List<NotificationResponse> getNotificationsResponse(final List<Notification> notifications) {
         return notifications.stream()
-                .map(notification -> NotificationResponse.of(notification))
-                .toList();
+                .map(NotificationResponse::of)
+                .collect(Collectors.toList());
     }
 
-    public void updateAllNotifications(final Long memberId) {
-        final Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new BadRequestException(NOT_FOUND_MEMBER_ID));
+    private void validateNotifications(final Set<Long> notificationIdsSet, final List<Notification> notifications) {
+        final Set<Long> notificationIds = notifications.stream()
+                .map(Notification::getId)
+                .collect(Collectors.toSet());
 
-        final List<Notification> notifications = notificationRepository.findAllByMemberId(member.getId());
-        notifications.forEach(Notification::changeIsChecked);
-
-        notificationRepository.saveAll(notifications);
-    }
-
-    public void update(final Long notificationId) {
-        final Notification notification = notificationRepository.findById(notificationId)
-                .orElseThrow(() -> new BadRequestException(NOT_FOUND_NOTIFICATION_ID));
-
-        notification.changeIsChecked();
-        notificationRepository.save(notification);
+        if (!notificationIds.containsAll(notificationIdsSet)) {
+            throw new BadRequestException(NOT_FOUND_NOTIFICATION_ID);
+        }
     }
 }
